[project]
name = "interop-fibre"
version = "0.1.0"
description = ""
authors = [
    {name = "Sloknatos", email = "contact.codeberg@sloknatos.ovh"}
]
license = {text = "'GNUv3'"}
readme = "README.md"
requires-python = ">=3.13"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
fastapi = {extras = ["standard"], version = "^0.128.0"}
uvicorn = {extras = ["standard"], version = "^0.40.0"}

[dependency-groups]
dev = [
    "ruff (>=0.14.10,<0.15.0)"
]
test = [
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.test]
optional = true