[project]
name = "interop-fibre"
version = "0.1.0"
description = ""
authors = [
    {name = "Sloknatos", email = "contact.codeberg@sloknatos.ovh"}
]
license = {text = "'GNUv3'"}
readme = "README.md"
requires-python = ">=3.12"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
fastapi = {extras = ["standard"], version = "^0.128.0"}
uvicorn = {extras = ["standard"], version = "^0.40.0"}
sqlalchemy = "^2.0.45"

[dependency-groups]
dev = [
    "ruff (>=0.14.10,<0.15.0)"
]
test = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest-describe (>=3.1.0,<4.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "pytest-api-cov (>=1.2.3,<2.0.0)",
]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.test]
optional = true

[tool.ruff]
exclude = ["tests"]
line-length = 80
fix = true
preview = true

[tool.pytest.ini_options]
addopts = "--cov-report=term-missing --cov-report html --cov=app tests/ --cov-fail-under=80 -v --ignore=tests/unitaire/model/test_anomalieAdresse.py"
testpaths = ["tests"]
norecursedirs="tests/unitaire/model/*"
filterwarnings =["ignore::DeprecationWarning"]

[tool.coverage]